# bal-ctrl

./: .gitignore  AngularMomentandCoMstates.txt  CMakeLists.txt  README.md  plot.py
SimulinkCoSimulation/: Acrobot_test.slxc  data.xlsx  readme.txt  startup.m  test.m  ud_Tri_parameter.m  un_TriPInPID_test.slxc
SimulinkCoSimulation/.SimulinkProject/Root.type.ProjectPath/: 26218c7b-6723-4b82-9242-f9e4d04c2a7e.type.Reference.xml  30210391-6bc5-42ad-b012-c5ae05a5710e.type.Reference.xml  46f4c335-1d2a-417d-b9e0-7e8e13cb5f25.type.Reference.xml  4f7c3515-9b71-4941-bc3d-267365317ae9.type.Reference.xml  5591ccb0-d4cd-460b-8d95-7cfc3b1e28c7.type.Reference.xml  79351a8f-a23d-4b56-bd6f-da14202d6f72.type.Reference.xml  7ac70662-4db6-4f5f-a5ed-4e8c687b07a7.type.Reference.xml  9bd3c300-8c32-471d-857e-d8b94056d74a.type.Reference.xml  b4c61b83-568b-477d-afc6-a0a73fdadac2.type.Reference.xml  deee8f1e-43a3-4cb2-9b91-b5c99c223bb5.type.Reference.xml  f8d5f7f9-8cb6-4c65-8301-82001316c9bd.type.Reference.xml
SimulinkCoSimulation/CoSimExample/ExampleModel/: Acrobot_test.slx  Copy_of_un_TriPInPID_test.slx  TripleAcrobot.slx  un_TriPInPID_test.slx  un_TriPInPID_test.slx.autosave  un_TriPInPID_test.slx.original  un_TriPInPID_test.slxc
SimulinkCoSimulation/CoSimExample/ExampleModel/slprj/sim/varcache/un_TriPInPID_test/: checksumOfCache.mat  varInfo.mat
SimulinkCoSimulation/CoSimExample/ExampleModel/slprj/sim/varcache/un_TriPInPID_test/tmwinternal/: simulink_cache.xml
SimulinkCoSimulation/CoSimExample/sfun/: acrobotclient.hpp  acrobotsfun.asv  acrobotsfun.cpp  acrobotsfun.mexw64  controluntriplnclient.cpp  controluntriplnclient.hpp  controluntriplnsfun.cpp  controluntriplnsfun.mexw64
SimulinkCoSimulation/slprj/sim/varcache/Acrobot_test/: checksumOfCache.mat  varInfo.mat
SimulinkCoSimulation/slprj/sim/varcache/Acrobot_test/tmwinternal/: simulink_cache.xml
SimulinkCoSimulation/slprj/sim/varcache/un_TriPInPID_test/: checksumOfCache.mat  varInfo.mat
SimulinkCoSimulation/slprj/sim/varcache/un_TriPInPID_test/tmwinternal/: simulink_cache.xml
SimulinkCoSimulation/utils/: SetEnvVariable.m  buildCoSimExample.m  git_clone_zmq.m
demo/: CMakeLists.txt  main.cpp
demo/demo_triplependulum/: CMakeLists.txt  main.cpp  test_dynamics.cpp
demo/demo_triplependulum/data/: control-test.txt  controltest.xlsx  forward_dynamics.txt  mvbal_data_2024-03-24--22-52-06.txt  mvbal_data_2024-03-24--23-32-54.txt
include/: control.hpp  export.h  model.hpp  plan.hpp  zmqmsg.hpp
src/: CMakeLists.txt  main.cpp
src/controller/: control.cpp  model.cpp
src/plan/: pid.hpp  plan.cpp
src/solver/: math.cpp  qpsolver.cpp  qpsolver.hpp
src/utils/: utils.cpp
src/zmq/: zmqmsg.cpp
